Version 1.6 (2.0 Alpha 6)
-------------------------

Version 1.5 (2.0 Alpha 5)
-------------------------
-clicking on shaft doors and elevator doors while holding down shift now causes them to manually open/close
-manually opening shaft doors causes the related floor to turn on if user is
in a shaft or an elevator
-added new buildings
-added support for multiple floor indicators per elevator
-floors can now have floor indicators
-added support for elevator floor beeps
-added support for separate up/down chimes
-added support for per-door textures on elevator/shaft doors
-added elevator door collision sensors
-added last collision indicator to control panel
-added support for call button lighting
-major fixes to the elevator queue and call processing
-fixes to some elevator parameters, where they would error out if used in a different block than the CreateElevator command
-sound support is now optional and will switch off automatically if not available
-some new script checks for valid floor ranges
-added basic glass elevators to the Glass Tower
-simultaneous door movements are now supported
-call button monitor added, to realistically wait for an available elevator during a call
-call button light status can now be changed by shift-clicking the button
-elevator panel buttons now support position offsets
-fixed manual sizing parameters of the panel buttons
-added support for mounting zipfiles into virtual directories
-added the ability to spin the camera (Z-axis rotation)
-startup screen now works on Linux and Mac
-added mouse look (freelook) mode, activated by F5
-new Camera Control window
-split chimes sounds into up and down versions
-added support for writing text onto a texture with the AddText command
-fixed a memory leak involving floor beeps
-added support for texture name prefixes, used with floor indicators and signs
-added support for cropping and overlaying textures with the LoadCropped and AddOverlay commands
-added configuration file support