@@ -1,5 +1,6 @@
 Version 1.6 (2.0 Alpha 6)
 -------------------------
+-added current floor ID to the control panel's main and camera control windows
 
 Version 1.5 (2.0 Alpha 5)
 -------------------------
